--- a/skin/index.html
+++ b/skin/index.html
@@ -13,7 +13,7 @@
     <script>
       function qw(){
         url=document.getElementById("pngs")
-        window.location.href="http://bellibutton.github.io/BLmc/"+url.value+".png"
+        window.location.href="http://bellibutton.github.io/BLmc/skin/"+url.value+".png"
       }
     </script>
     </p>
